--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
   "name": "route-engine-js",
   "version": "0.1.23",
+  "description": "A lightweight Visual Novel engine built in JavaScript for creating interactive narrative games with branching storylines",
+  "keywords": [
+    "game-engine",
+    "visual-novel",
+    "visual-novel-games",
+    "visual-novel-engine",
+    "interactive-fiction-engine",
+    "visual-novel-maker",
+    "visual-novel-framework",
+    "visual-novel-editor",
+    "visual-novel-tools",
+    "visual-novel-creator"
+  ],
   "type": "module",
   "main": "dist/RouteEngine.js",
   "exports": {
