--- a/spec/system/createInitialState.spec.yaml
+++ b/spec/system/createInitialState.spec.yaml
@@ -66,7 +66,8 @@ out:
           historySequenceIndex: __undefined__
       historySequence:
         - sectionId: "section1"
-          lineId: "line1"
+          lines:
+            - id: "line1"
       configuration: {}
       views: []
       bgm:
@@ -170,7 +171,8 @@ out:
           historySequenceIndex: __undefined__
       historySequence:
         - sectionId: "section1"
-          lineId: "line1"
+          lines:
+            - id: "line1"
       configuration: {}
       views: []
       bgm:
@@ -252,7 +254,8 @@ out:
           historySequenceIndex: __undefined__
       historySequence:
         - sectionId: "section1"
-          lineId: "line1"
+          lines:
+            - id: "line1"
       configuration: {}
       views: []
       bgm:
@@ -355,7 +358,8 @@ out:
           historySequenceIndex: __undefined__
       historySequence:
         - sectionId: "section1"
-          lineId: "line1"
+          lines:
+            - id: "line1"
       configuration: {}
       views: []
       bgm:
